--- a/WebDev/projects/project2/index.html
+++ b/WebDev/projects/project2/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <header>
-        <img src="/projects/project2/food_images/chefs_hat.png" alt="Chef's Hat" class="chefs-hat" onclick="window.location.href='index.html'">
+        <img src="food_images/chefs_hat.png" alt="Chef's Hat" class="chefs-hat" onclick="window.location.href='index.html'">
         <h1>Dine on Campus</h1>
         <p>Are you a culinary adventurer in search of the perfect meal on campus? Look no further! We've curated a list of the most exceptional dishes that are sure to tantalize your taste buds. From fresh pizzas to mouthwatering sushi, this list has got you covered. So, put on your foodie hat and let's dive into the delightful world of flavors...</p>
     </header>
