--- a/WebDev/projects/project2/index.html
+++ b/WebDev/projects/project2/index.html
@@ -102,9 +102,9 @@
     <div class="menu">
         <div id="chipotle" class="dish">
             <h2>Chipotle Dishes</h2>
-            <img src="/projects/project2/food_images/chipotle_bowl.jpg" alt="Burrito Bowl" onclick="showDish('chipotle-bowl', this)">
-            <img src="/projects/project2/food_images/burrito.webp" alt="Burrito" onclick="showDish('chipotle-burrito', this)">
-            <img src="/projects/project2/food_images/chips_guac.webp" alt="Chips and Guac" onclick="showDish('chipotle-chips', this)">
+            <img src="food_images/chipotle_bowl.jpg" alt="Burrito Bowl" onclick="showDish('chipotle-bowl', this)">
+            <img src="food_images/burrito.webp" alt="Burrito" onclick="showDish('chipotle-burrito', this)">
+            <img src="food_images/chips_guac.webp" alt="Chips and Guac" onclick="showDish('chipotle-chips', this)">
             <div id="chipotle-bowl" class="dish-description">
                 <h3>Burrito Bowl - $9.50</h3>
                 <p>A delicious bowl filled with all your favorite burrito ingredients, customized to your liking.</p>
@@ -121,9 +121,9 @@
 
         <div id="raaz" class="dish">
             <h2>Raaz Indian Kitchen Dishes</h2>
-            <img src="/projects/project2/food_images/gobi_manchurian.jpg" alt="Gobi Manchurian" onclick="showDish('raaz-gobi', this)">
-            <img src="/projects/project2/food_images/samosa_chaat.jpg" alt="Samosa Chaat" onclick="showDish('raaz-samosa', this)">
-            <img src="/projects/project2/food_images/chicken_pakora.webp" alt="Chicken Pakora" onclick="showDish('raaz-chicken', this)">
+            <img src="food_images/gobi_manchurian.jpg" alt="Gobi Manchurian" onclick="showDish('raaz-gobi', this)">
+            <img src="food_images/samosa_chaat.jpg" alt="Samosa Chaat" onclick="showDish('raaz-samosa', this)">
+            <img src="food_images/chicken_pakora.webp" alt="Chicken Pakora" onclick="showDish('raaz-chicken', this)">
             <div id="raaz-gobi" class="dish-description">
                 <h3>Gobi Manchurian</h3>
                 <p>A popular Indo-Chinese dish made with cauliflower, tossed in a tangy sauce.</p>
@@ -140,9 +140,9 @@
 
         <div id="sushi" class="dish">
             <h2>Sushi Republic Dishes</h2>
-            <img src="/projects/project2/food_images/tempura_udon.jpg" alt="Tempura Udon" onclick="showDish('sushi-tempura', this)">
-            <img src="/projects/project2/food_images/spicy_seafood_champon_ramen.webp" alt="Spicy Seafood Champon Ramen" onclick="showDish('sushi-seafood', this)">
-            <img src="/projects/project2/food_images/beef_shoyu_ramen.webp" alt="Beef Shoyu Ramen" onclick="showDish('sushi-beef', this)">
+            <img src="food_images/tempura_udon.jpg" alt="Tempura Udon" onclick="showDish('sushi-tempura', this)">
+            <img src="food_images/spicy_seafood_champon_ramen.webp" alt="Spicy Seafood Champon Ramen" onclick="showDish('sushi-seafood', this)">
+            <img src="food_images/beef_shoyu_ramen.webp" alt="Beef Shoyu Ramen" onclick="showDish('sushi-beef', this)">
             <div id="sushi-tempura" class="dish-description">
                 <h3>Tempura Udon - $10.50</h3>
                 <p>Thick udon noodles served in a rich broth with crispy tempura.</p>
