--- a/WebDev/projects/project2/meal_plan.html
+++ b/WebDev/projects/project2/meal_plan.html
@@ -105,7 +105,7 @@
 </head>
 <body>
     <header>
-        <img src="/projects/project2/food_images/chefs_hat.png" alt="Chef's Hat" class="chefs-hat" onclick="window.location.href='index.html'">
+        <img src="food_images/chefs_hat.png" alt="Chef's Hat" class="chefs-hat" onclick="window.location.href='index.html'">
         <h1>Create a Meal Plan</h1>
     </header>
     
